Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ body {
   justify-content: center;
   margin-bottom: -13vh;
   overflow: hidden;
+  padding-top: 20px;
 }
 
 .shadow {
